fix for buttons on smaller screens

--- a/public/less/homepage.less
+++ b/public/less/homepage.less
@@ -271,6 +271,8 @@ h1:after, h2:after {
 
   background: #45cba1;
   color: #fff !important;
+
+  margin: 10px 20px 10px 0;
 }
 
 .btn img {
@@ -290,7 +292,7 @@ h1:after, h2:after {
 }
 
 .btn + .btn {
-  margin-left: 20px;
+
 }
 
 .btn.secondary {
